docs: update blog

--- a/src/.vuepress/.temp/sass-palette/hope-palette.scss
+++ b/src/.vuepress/.temp/sass-palette/hope-palette.scss
@@ -1,3 +1,3 @@
-@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
-@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/src/.vuepress/styles/palette.scss";
-@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
+//@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/node_modules/vuepress-theme-hope/templates/palette/palette.scss";
+//@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/src/.vuepress/styles/palette.scss";
+//@import "file:////Users/fuzhengwei1/Documents/develop/github/qyangCode/wqy-dev-tech-blog/node_modules/vuepress-theme-hope/templates/palette/generator.scss";
